@@ -119,13 +119,13 @@
 		<property name="maven.zip.url" value="${maven.base.url}${maven.zip}"/>
 		<property name="maven.gz.url" value="${maven.base.url}${maven.gz}"/>
 		<property name="maven.dir" value="build/apache-maven-${maven.version}"/>
-		<property name="tomcat.version" value="9.0.56"/>
+		<property name="tomcat.version" value="9.0.56"/><!-- on update: also update jms, ojdbc and mssql -->
 		<property name="tomcat.zip" value="apache-tomcat-${tomcat.version}.zip"/>
 		<property name="tomcat.url" value="https://archive.apache.org/dist/tomcat/tomcat-9/v${tomcat.version}/bin/${tomcat.zip}"/>
 		<property name="tomcat.dir" value="build/apache-tomcat-${tomcat.version}"/>
 		<property name="tomcat.connector.port" value="80"/>
 		<property name="tomcat.server.port" value="8005"/>
-		<property name="eclipse.version" value="2021-09"/>
+		<property name="eclipse.version" value="2021-12"/><!-- on update: also update lombok -->
 		<property name="eclipse.file" value="eclipse-jee-${eclipse.version}-R-win32-x86_64" if:true="${os.windows}"/>
 		<property name="eclipse.file" value="eclipse-jee-${eclipse.version}-R-linux-gtk-x86_64" if:true="${os.linux}"/>
 		<property name="eclipse.file" value="eclipse-jee-${eclipse.version}-R-macosx-cocoa-x86_64" if:true="${os.mac}"/>
@@ -134,8 +134,8 @@
 		<property name="eclipse.tar" value="${eclipse.file}.tar"/>
 		<property name="eclipse.url" value="https://ftp.snt.utwente.nl/pub/software/eclipse/technology/epp/downloads/release/${eclipse.version}/R/${eclipse.zip}"/>
 		<property name="eclipse.dir" value="build/${eclipse.file}"/>
-		<property name="lombok.version" value="1.18.20"/>
-		<property name="lombok.jar" value="lombok-1.18.20.jar"/>
+		<property name="lombok.version" value="1.18.22"/>
+		<property name="lombok.jar" value="lombok-${lombok.version}.jar"/>
 		<property name="lombok.url" value="https://projectlombok.org/downloads/${lombok.jar}"/>
 		<property name="winmerge.version" value="2.16.6"/>
 		<property name="winmerge.zip" value="winmerge-${winmerge.version}-exe.zip"/>
@@ -437,9 +437,6 @@
 		<chmod dir="${eclipse.dir}/plugins/" includes="**/jre/bin/*" perm="+x" unless:set="eclipse.dir.available" if:true="${eclipse}" unless:true="${os.windows}"/>
 		<copy todir="${eclipse.dir}" file="download/${lombok.jar}" unless:set="eclipse.dir.available" if:true="${eclipse}"/>
 		<concat destfile="${eclipse.dir}/eclipse.ini" append="true" unless:set="eclipse.dir.available" if:true="${eclipse}">-javaagent:${lombok.jar}&#13;&#10;</concat>
-		<!-- with newer lombok version the following 2 lines can probably be removed (tested with pre-built version from https://github.com/projectlombok/lombok/issues/2810 on linux) -->
-		<concat destfile="${eclipse.dir}/eclipse.ini" append="true" unless:set="eclipse.dir.available" if:true="${eclipse}">--illegal-access=warn&#13;&#10;</concat><!-- see https://stackoverflow.com/questions/69218106/eclipse-not-able-to-open-java-files-unable-to-make-protected-final-java-lang -->
-		<concat destfile="${eclipse.dir}/eclipse.ini" append="true" unless:set="eclipse.dir.available" if:true="${eclipse.and.os.windows}">--add-opens java.base/java.lang=ALL-UNNAMED&#13;&#10;</concat><!-- prevents eclipse from starting up properly on linux and doesn't seem to be necessary on linux -->
 		<antcall target="cacerts" if:true="${eclipse}"><param name="jdk.dir" value="${eclipse.dir}/plugins/org.eclipse.justj.openjdk.hotspot.jre.full.win32.x86_64_16.0.2.v20210721-1149"/></antcall>
 		<!-- winmerge -->
 		<unzip src="download/${winmerge.zip}" dest="${winmerge.dir}" unless:set="winmerge.dir.available"/>
